--- a/src/app/iget-editor/iget-editor-toolbar/iget-editor-toolbar.component.scss
+++ b/src/app/iget-editor/iget-editor-toolbar/iget-editor-toolbar.component.scss
@@ -1,3 +1,9 @@
+@import '~@angular/material/theming';
+
+:host {
+  display: flex;
+  @include mat-elevation(2);
+}
 .mat-button {
   padding: 0;
   min-width: 36px;
