Make Link Dialog work. Update README.md

--- a/src/app/iget-editor/iget-editor-toolbar/iget-editor-toolbar.component.html
+++ b/src/app/iget-editor/iget-editor-toolbar/iget-editor-toolbar.component.html
@@ -1,8 +1,8 @@
 <iget-editor-toolbar-group>
-    <iget-editor-toolbar-button icon="format_bold" title="Bold" action="bold"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_italic" title="Italic" action="italic"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_underline" title="Underline" action="underline"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_strikethrough" title="Strikethrough" action="strikethrough"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_bold" title="Bold" action="bold"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_italic" title="Italic" action="italic"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_underline" title="Underline" action="underline"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_strikethrough" title="Strikethrough" action="strikethrough"></iget-editor-toolbar-button>
 </iget-editor-toolbar-group>
 <iget-editor-toolbar-group>
   <iget-editor-toolbar-button icon="font_download" title="Font Family" >
@@ -37,23 +37,24 @@
   <iget-editor-toolbar-button icon="format_clear" title="Clear formatting" action="removeFormat"></iget-editor-toolbar-button>
 </iget-editor-toolbar-group>
 <iget-editor-toolbar-group>
-    <iget-editor-toolbar-button icon="format_align_left" title="Align left" action="justifyLeft"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_align_center" title="Align center" action="justifyCenter"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_align_right" title="Align right" action="justifyRight"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_align_justify" title="Justify" action="justifyFull"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_align_left" title="Align left" action="justifyLeft"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_align_center" title="Align center" action="justifyCenter"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_align_right" title="Align right" action="justifyRight"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_align_justify" title="Justify" action="justifyFull"></iget-editor-toolbar-button>
 </iget-editor-toolbar-group>
 <iget-editor-toolbar-group>
-    <iget-editor-toolbar-button icon="format_indent_decrease" title="Outdent" action="outdent"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_indent_increase" title="Indent" action="indent"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_quote" title="Blockquote" action="blockquote"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_list_bulleted" title="Unordered list" action="insertUnorderedList"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="format_list_numbered" title="Ordered list" action="insertOrderedList"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_indent_decrease" title="Outdent" action="outdent"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_indent_increase" title="Indent" action="indent"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_quote" title="Blockquote" action="blockquote"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_list_bulleted" title="Unordered list" action="insertUnorderedList"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="format_list_numbered" title="Ordered list" action="insertOrderedList"></iget-editor-toolbar-button>
 </iget-editor-toolbar-group>
 <iget-editor-toolbar-group>
-    <iget-editor-toolbar-button icon="undo" title="Undo" action="undo"></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="redo" title="Redo" action="redo"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="undo" title="Undo" action="undo"></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="redo" title="Redo" action="redo"></iget-editor-toolbar-button>
 </iget-editor-toolbar-group>
 <iget-editor-toolbar-group>
-    <iget-editor-toolbar-button icon="insert_link" title="Insert link" action=""></iget-editor-toolbar-button>
-    <iget-editor-toolbar-button icon="insert_photo" title="Insert image" action=""></iget-editor-toolbar-button>
+  <iget-editor-toolbar-button icon="insert_link" title="Insert link" (click)="insertLink()"></iget-editor-toolbar-button>
+  <!-- @todo: Implement image upload -->
+  <!--<iget-editor-toolbar-button icon="insert_photo" title="Insert image" action=""></iget-editor-toolbar-button>-->
 </iget-editor-toolbar-group>
